--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,11 +17,10 @@ header{
 .logo{
 	background-color: #4aaaa5;
 	width:270px;
-	font-size:50px;
 	color:#ffffff;
 	text-align: center;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	float: left;
+	margin-top: 20px;
 
 }
 
@@ -40,4 +39,71 @@ footer{
 	width:100%;
 	height:100px;
 	border-top: solid #4aaaa5 4px;
+	position:fixed;
+   	left:0px;
+   	bottom:0px;
+}
+
+.content_nav{
+	float: right;
+	height: auto;
+	padding-top: 40px;
+}
+
+ul{
+	list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+li{
+    display: inline;
+    border-right: 1px solid #bbb;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+li:last-child {
+    border-right: none;
+}
+
+h1{
+	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+.profile_pic{
+	width: 200px;
+	float: left;
+	display: inline;
+	margin-right:20px; 
+}
+
+.central_content{
+	margin: auto;
+	padding: 30px;
+	margin-top: 20px;
+	float: left;
+	display: inline;
+	width: 650px;
+	margin-left: 70px;
+}
+
+.sidebar{
+	float: right;
+	display: inline;
+	margin: auto;
+	padding: 20px;
+	margin-top: 20px;
+	width: 270px;
+	margin-right: 90px;
+}
+
+p{
+	line-height: 30px;
+	color: #777777;
+}
+
+.content_footer{
+	text-align: center;
+	padding: 50px 0;
 }
