--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,58 +2,104 @@ html, body{
 	margin: 0;
 	padding: 0;
 	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	background-image: url("../images/ps_neutral.png");
 	
 }
 
-
+h1,h2{
+	font-family:'Georgia', Times, Times New Roman, serif;
+	color: #4aaaa5;
+}
 
 header{
 	background-color: white;
 	width:100%;
-	height:100px;
-	border-bottom: solid #4aaaa5 4px;
+	height:80px;
+	border-bottom: solid #cccccc 4px;
+	position: relative;
 }
 
-.logo{
+#logo{
 	background-color: #4aaaa5;
-	width:270px;
+	padding-top: 25px;
+	padding-bottom: 25px;
+	padding-left: 50px;
+	padding-right: 50px;
 	color:#ffffff;
 	text-align: center;
+	float:left;
+	position: absolute;
+	bottom: 0;
+	font-size: 30px;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	left: 100px;
+
+}
+
+#menu{
+	position: absolute;
+	right: 10px;
+	height: auto;
+	margin-top: 40px;
+	right: 100px;
+
+}
+
+#content{
+	position: absolute;
+	margin-left: 100px;
+	margin-right: 100px;
+}
+#bio{
+	width: 650px;
 	float: left;
 	margin-top: 20px;
+	margin-right: 30px;
+	background-color: #ffffff;
+	border: solid #dddddd 1px;
+	padding: 20px;
+}
+
+#contact{
+	width: 650px;
+	float: left;
+	margin-top: 20px;
+	margin-right: 30px;
+	background-color: #ffffff;
+	border: solid #dddddd 1px;
+	padding: 20px;
+}
+
+#social{
+	width: 270px;
+	float: left;
+	margin-top: 20px;
+	background-color: #ffffff;
+	border: solid #dddddd 1px;
+	padding: 20px;
+	font-size: 15px;
 
 }
 
-.central_content{
-	background-color: #ffffff;
-	border:solid #dddddd 2px;
-	width:650px;
-}
-.sidebar{
-	background-color: #ffffff;
-	border:solid #dddddd 2px;
-	width:270px;
-}
 footer{
 	background-color:#666666;
 	width:100%;
 	height:100px;
 	border-top: solid #4aaaa5 4px;
-	position:fixed;
-   	left:0px;
-   	bottom:0px;
+   	position: absolute;
+   	bottom: 0px;
+   	text-align: center;
 }
 
-.content_nav{
-	float: right;
-	height: auto;
-	padding-top: 40px;
-}
+
+
+
 
 ul{
 	list-style-type: none;
     margin: 0;
     padding: 0;
+
 }
 
 li{
@@ -63,12 +109,21 @@ li{
     padding-right: 10px;
 }
 
+a{
+	text-decoration: none;
+	color: #cccccc;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 20px;
+
+}
+
 li:last-child {
     border-right: none;
 }
 
-h1{
-	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+.title{
+	font-family:'Georgia', Times, Times New Roman, serif;
+	color: #4aaaa5;
 }
 
 .profile_pic{
@@ -106,4 +161,61 @@ p{
 .content_footer{
 	text-align: center;
 	padding: 50px 0;
+}
+
+.social{
+	width: 50px;
+	height: 50px;
+}
+
+#icons{
+	position: relative;
+	display: inline;
+
+}
+
+.social{
+	width: 70px;
+	height: 70px;
+	margin-right: 17px;
+
+}
+
+.content_footer{
+	text-align: center;
+	padding: 50px 0;
+	color: #fff;
+
+}
+
+#bar1{
+	background: #cccccc;
+	height:3px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+#bar2{
+	background: #cccccc;
+	height:2px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+.row{
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	color: #777777;
+}
+
+.submit{
+	background-color: #4aaaa5;
+	border: none;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	color: #ffffff;
+	font-size: 20px;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-bottom: 10px;
+	padding-top: 10px;
+
 }
