--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 html, body{
 	margin: 0;
 	padding: 0;
+	height: 1200px;
 	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	background-image: url("../images/ps_neutral.png");
 	
@@ -60,6 +61,16 @@ header{
 	padding: 20px;
 }
 
+#portfolio{
+	width: 650px;
+	float: left;
+	margin-top: 20px;
+	margin-right: 30px;
+	background-color: #ffffff;
+	border: solid #dddddd 1px;
+	padding: 20px;
+}
+
 #contact{
 	width: 650px;
 	float: left;
@@ -86,7 +97,7 @@ footer{
 	width:100%;
 	height:100px;
 	border-top: solid #4aaaa5 4px;
-   	position: absolute;
+   	position: fixed;
    	bottom: 0px;
    	text-align: center;
 }
@@ -131,6 +142,31 @@ li:last-child {
 	float: left;
 	display: inline;
 	margin-right:20px; 
+}
+
+.image_portfolio{
+	width: 200px;
+}
+.placeholder{
+	width: 200px;
+	float: left;
+	display: inline;
+	margin-right:20px;
+	margin-bottom: 20px; 
+	margin-right: 20px;
+}
+
+
+#images_portfolio{
+  	margin: 0px auto;
+  	position: relative;
+  	margin-left: 100px;
+}
+
+#images_portfolio::after {
+	content:"";
+	display: block;
+	clear: both;
 }
 
 .central_content{
@@ -205,6 +241,9 @@ p{
 .row{
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	color: #777777;
+	margin-bottom: 10px;
+	margin-top: 10px;
+	font-size: 20px;
 }
 
 .submit{
@@ -218,4 +257,15 @@ p{
 	padding-bottom: 10px;
 	padding-top: 10px;
 
+}
+
+.project_name{
+	background-color: #4aaaa5;
+	color: #ffffff;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	text-align: center;
+	position: relative;
+	bottom: 80px;
+	padding-top: -100px;
 }
