--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,6 @@ header{
 
 #menu{
 	position: absolute;
-	right: 10px;
 	height: auto;
 	margin-top: 40px;
 	right: 100px;
@@ -194,9 +193,10 @@ p{
 	color: #777777;
 }
 
-.content_footer{
+#content_footer{
 	text-align: center;
-	padding: 50px 0;
+	padding: 20px 0;
+	color: #ffffff;
 }
 
 .social{
@@ -268,4 +268,17 @@ p{
 	position: relative;
 	bottom: 80px;
 	padding-top: -100px;
+}
+
+.project_name:hover {
+	background-color: #ffffff;
+	color: #4aaaa5;
+}
+
+.profile_pic:hover{
+	opacity: 0.2;
+}
+
+#call_me{
+	width: 200px;
 }
