--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ header{
 	position: absolute;
 	height: auto;
 	margin-top: 40px;
-	right: 100px;
+	right: 140px;
 
 }
 
@@ -137,29 +137,29 @@ li:last-child {
 }
 
 .profile_pic{
-	width: 200px;
+	width: 250px;
 	float: left;
 	display: inline;
 	margin-right:20px; 
 }
 
 .image_portfolio{
-	width: 200px;
+	width: 250px;
+	margin-right: 50px;
 }
 .placeholder{
-	width: 200px;
+	width: 250px;
 	float: left;
 	display: inline;
-	margin-right:20px;
 	margin-bottom: 20px; 
-	margin-right: 20px;
+	margin-right: 30px;
 }
 
 
 #images_portfolio{
   	margin: 0px auto;
   	position: relative;
-  	margin-left: 100px;
+  	margin-left: 50px;
 }
 
 #images_portfolio::after {
@@ -217,6 +217,10 @@ p{
 
 }
 
+.social:hover{
+	opacity: 0.2;
+}
+
 .content_footer{
 	text-align: center;
 	padding: 50px 0;
@@ -272,7 +276,8 @@ p{
 	text-align: center;
 	position: relative;
 	bottom: 80px;
-	padding-top: -100px;
+	margin-bottom: -60px;
+	width: 100%;
 }
 
 .project_name:hover {
